# mozhi

./: .env.example  .gitignore  README.md  claude.md  pyproject.toml  setup.py
desktop_agent/mozhi_agent/: __init__.py  config.py  main.py  models.py
desktop_agent/mozhi_agent/audio/: server.py
desktop_agent/mozhi_agent/injection/: __init__.py  base.py  factory.py  macos.py  windows.py
desktop_agent/mozhi_agent/observability/: logging_utils.py
desktop_agent/mozhi_agent/pipeline/: bridge.py
desktop_agent/mozhi_agent/risk/: filter.py
desktop_agent/mozhi_agent/security/: pairing.py  pairing_qr.py
desktop_agent/mozhi_agent/stt/: __init__.py  transcriber.py
desktop_agent/mozhi_agent/ui/: confirm.py  tray.py
mobile_app/: README.md  pubspec.yaml
mobile_app/android/app/: build.gradle.kts
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/kotlin/com/example/mozhi_mobile/: MainActivity.kt
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: main.dart
mobile_app/lib/models/: pairing_session.dart
mobile_app/lib/screens/: push_to_talk_screen.dart  qr_scan_screen.dart
mobile_app/lib/services/: audio_stream_service.dart  crypto_helper.dart  pairing_service.dart  session_store.dart
mobile_app/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile_app/macos/Runner.xcodeproj/: project.pbxproj
mobile_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile_app/macos/Runner/Configs/: AppInfo.xcconfig
mobile_app/test/: widget_test.dart
scripts/: build_macos.sh  build_windows.ps1
