[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mozhi-desktop-agent"
version = "0.1.0"
description = "Production-grade desktop voice bridge for Claude Desktop"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "cryptography>=42.0",
  "faster-whisper>=1.0.3",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
windows = ["pywinauto>=0.6.9", "pywin32>=306"]
macos = ["pyobjc-core>=10.2", "pyobjc-framework-Cocoa>=10.2"]
tray = ["pystray>=0.19", "Pillow>=10.2"]

[project.scripts]
mozhi-agent = "mozhi_agent.main:run"

[tool.setuptools]
package-dir = {"" = "desktop_agent"}

[tool.setuptools.packages.find]
where = ["desktop_agent"]
